# sentence_evolver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  cli.py  pyproject.toml
.github/workflows/: ci.yml
engine/: __init__.py  evolver.py  persona.py
tests/: test_evolver.py
